--- a/templates/AllDetails.html
+++ b/templates/AllDetails.html
@@ -1,6 +1,9 @@
-{% extends 'Base.html' %} {% block register_active %}active{% endblock %} {%
-block content %}
-<div class="details-page container">
+{% extends 'Base.html' %} 
+
+{% block register_active %}active{% endblock %} 
+
+{% block content %}
+<div id="details-page" class="container">
   <div>
     <div class="info-container alert fw-semibold my-3 my-md-5">
       <span class="fw-bold">Info!</span> All student records table
