--- a/templates/Base.html
+++ b/templates/Base.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="static\assets\bootstrap-5.3.2-dist\css\bootstrap.css"
+      href="{{ url_for('static', filename='bootstrap-5.3.2-dist/css/bootstrap.css')}}"
     />
-    <link rel="stylesheet" href="static\assets\styles.css" />
-    <title>Document</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" />
+    <title>Student Portal</title>
   </head>
   <body>
     <header>
@@ -58,8 +58,8 @@
         <p class="mb-1">All Rights Reserved &copy;Ustacky 2021 ~xerosine</p>
       </div>
     </footer>
-    <script src="static\assets\bootstrap-5.3.2-dist\js\bootstrap.js"></script>
-    <script src="static\assets\jquery.js"></script>
-    <script src="static\scripts.js"></script>
+    <script src="{{ url_for('static', filename='bootstrap-5.3.2-dist/js/bootstrap.js')}}"></script>
+    <script src="{{ url_for('static', filename='jquery.js')}}"></script>
+    <script src="{{ url_for('static', filename='script.js')}}"></script>
   </body>
 </html>
