--- a/templates/LandingPage.html
+++ b/templates/LandingPage.html
@@ -3,7 +3,7 @@
 {% block home_active %}active{% endblock %}
 
 {% block content %}
-<div class="container-fluid landing-page">
+<div id="landing-page" class="container-fluid">
     <div class="row">
         <div class="col-12 col-lg-6 d-flex justify-content-center order-2 order-lg-1">
             <div class="landing-content align-self-center mb-5">
@@ -14,7 +14,7 @@
         </div>
         <div class="col-12 col-lg-6 d-flex justify-content-center order-1 order-lg-2">
             <div class="landing-img-container mt-4 mb-lg-5 align-self-center">
-                <img class="img-fluid" src="..\static\assets\images\homepage.svg" alt="Learning Image">
+                <img class="img-fluid" src="..\static\images\homepage.svg" alt="Learning Image">
             </div>
         </div>
     </div>
